--- a/reactive-service/src/main/resources/application.yaml
+++ b/reactive-service/src/main/resources/application.yaml
@@ -2,11 +2,11 @@ server:
   port: 8189
 spring:
   r2dbc:
-    url: r2dbc:postgresql://localhost:5432/postgres?currentSchema=reactive
+    url: r2dbc:postgresql://localhost:5433/postgres?currentSchema=reactive
     username: postgres
-    password: admin
+    password: postgres
   flyway:
-    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=reactive
+    url: jdbc:postgresql://localhost:5433/postgres?currentSchema=reactive
     user: postgres
-    password: admin
+    password: postgres
     driver-class-name: org.postgresql.Driver
